--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,38 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+
   </head>
-  <body class="bg-info text-white">
-    <div class="container text-center">
-      <h1 class="display-1 mt-3">Full Stack Conf</h1>
-      <p class="lead mb-3 pb-3">Coming Soon, a One-day Conferance About All Things Javascript!</p>
-      <div class="col-lg-6 offset-lg-3">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Enter email for info...">
-          <span class="input-group-btn">
-            <button class="btn btn-primary" type="button">Sign up</button>
-          </span>
+  <body>
+    <div class="container-fluid">
+      <!-- about -->
+      <div class="row">
+        <div class="col">
+          <h3>About Full Stack Conf</h3>
+          <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
+          <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
+        </div>
+        <div class="col">
+          <h3>Expert Speakers</h3>
+          <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
+          <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
+          <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
+        </div>
+        <div class="col">
+          <h3>What You'll Learn</h3>
+          <ul>
+            <li><strong>MongoDB</strong>: NoSQL database</li>
+            <li><strong>Angular</strong>: JavaScript framework</li>
+            <li><strong>Express</strong>: Framework for Node</li>
+            <li><strong>Node.js</strong>: JavaScript environment</li>
+            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
+            <li><strong>Babel</strong>: JavaScript compiler</li>
+          </ul>
         </div>
       </div>
+      <!-- /about -->
     </div>
+    <!-- /container -->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
