Adds placeholder sections for speakers and schedule content

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,15 @@
         </div>
       </div>
       <!-- /about -->
+
+      <!-- speakers -->
+      <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
+      <!-- /speakers -->
+
+      <!-- schedule -->
+      <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
+      <!-- /schedule -->
+
     </div>
     <!-- /container -->
 
