--- a/public/index.html
+++ b/public/index.html
@@ -14,19 +14,19 @@
     <div class="container-fluid pt-5">
       <!-- about -->
       <div class="row">
-        <div class="col">
+        <div class="col-lg-4 push-lg-4">
           <h3 class="mb-4">About Full Stack Conf</h3>
-          <img src="img/pdx.jpg" alt="Portland" class="mb-3 img-fluid rounded">
+          <img src="img/pdx.jpg" alt="Portland" class="mb-3 img-fluid rounded hidden-xs-down">
           <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
         </div>
-        <div class="col">
+        <div class="col-lg-4 pull-lg-4">
           <h3 class="mb-4">Expert Speakers</h3>
           <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
           <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
           <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
         </div>
-        <div class="col">
+        <div class="col-lg-4">
           <h3 class="mb-4">What You'll Learn</h3>
           <ul>
             <li><strong>MongoDB</strong>: NoSQL database</li>
@@ -42,11 +42,33 @@
 
       <!-- speakers -->
       <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
+      [speakers content here]
       <!-- /speakers -->
 
       <!-- schedule -->
       <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
+      [schedule content here]
       <!-- /schedule -->
+
+      <!-- signup form -->
+      <hr>
+      <div class="row py-4 text-muted">
+        <div class="col-md-6 col-xl-5">
+          <p><strong>About Treehouse</strong></p>
+          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+        </div>
+        <div class="col-md-6 col-xl-5 offset-xl-2">
+          <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Email">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button">Sign up</button>
+            </span>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <!-- /signup form -->
 
     </div>
     <!-- /container -->
