Adds navbar and jumbotron

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,35 @@
 
   </head>
   <body>
-    <div class="container-fluid pt-5">
+    <!-- navbar -->
+    <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary">
+      <div class="container">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#about">About</a>
+          <a class="nav-item nav-link" href="#speakers">Speakers</a>
+          <a class="nav-item nav-link" href="#schedule">Schedule</a>
+        </div>
+      </div>
+      <a class="navbar-brand mr-auto" href="#">Presented by Treehouse</a>
+      </div>
+    </nav>
+    <!-- /navbar -->
+
+    <!-- jumbotron -->
+    <div class="jumbotron jumbotron-fluid text-white bg-info">
+      <div class="container text-sm-center pt-5">
+        <h1 class="display-2">Full Stack Conf</h1>
+        <p class="lead">A One-day Conference About All Things JavaScript!</p>
+      </div>
+    </div>
+    <!-- /jumbotron -->
+
+    <div class="container pt-5">
       <!-- about -->
       <div class="row">
         <div class="col-lg-4 push-lg-4">
