Adds section with register button, button group on jumbotron for register and schedule

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
       <div class="container text-sm-center pt-5">
         <h1 class="display-2">Full Stack Conf</h1>
         <p class="lead">A One-day Conference About All Things JavaScript!</p>
+
+        <div class="btn-group mt-4" role="group" aria-label="Basic example">
+          <button type="button" class="btn btn-primary btn-lg">Register Now</button>
+          <a class="btn btn-secondary btn-lg" href="#speakers">See Speakers</a>
+        </div>
       </div>
     </div>
     <!-- /jumbotron -->
@@ -43,7 +48,7 @@
       <!-- about -->
       <div class="row">
         <div class="col-lg-4 push-lg-4">
-          <h3 class="mb-4">About Full Stack Conf</h3>
+          <h3 id="about" class="mb-4">About Full Stack Conf</h3>
           <img src="img/pdx.jpg" alt="Portland" class="mb-3 img-fluid rounded hidden-xs-down">
           <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
@@ -69,14 +74,17 @@
       <!-- /about -->
 
       <!-- speakers -->
-      <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
+      <h1 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h1>
       [speakers content here]
       <!-- /speakers -->
 
       <!-- schedule -->
-      <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
+      <h1 id="schedule" class="display-4 text-center my-5 text-muted">Schedule</h1>
       [schedule content here]
       <!-- /schedule -->
+
+      <!-- callout button -->
+      <button type="button" class="btn btn-outline-info btn-lg d-block mx-auto my-5">Don't Miss Out, Register Now</button>
 
       <!-- signup form -->
       <hr>
