Adds horizontal nav for footer with dropup menu

--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,39 @@
       <hr>
       <!-- /signup form -->
 
+      <!-- footer -->
+      <div class="row py-3">
+        <div class="col-md-7">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Community</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tracks</a>
+            </li>
+            <li class="nav-item">
+              <!-- split button -->
+              <div class="btn-group dropup">
+                <button type="button" class="btn btn-secondary">Other Confs</button>
+                <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">CSS Conf</a>
+                  <a class="dropdown-item" href="#">Python Conf</a>
+                  <a class="dropdown-item" href="#">Java Conf</a>
+                  <a class="dropdown-item" href="#">Swift Conf</a>
+                </div>
+              </div>
+              <!-- /split button -->
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-5 text-md-right">
+          <small>&copy; 2016 Full Stack Conf &amp; Treehouse</small>
+        </div>
+      </div>
+      <!-- /footer -->
     </div>
     <!-- /container -->
 
