--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,67 @@
 
       <!-- speakers -->
       <h1 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h1>
-      [speakers content here]
+      <div class="row">
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="img/angie.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Angie McAngular</h4>
+              <p class="card-text">Angie is a web developer and teacher who is passionate about building scalable, data driven web apps, especially ones that address old problems with new tech!</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="img/nodestradamus.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">NodeStradamus</h4>
+              <p class="card-text">"NodeStra" is a software engineer and philosopher trying to leave the world better than he found it. He codes for non-profits, eCommerce, and large-scale web apps.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="img/geo.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Geo "Lo" Cation</h4>
+              <p class="card-text">Geo is a JavaScript developer working on large-scale applications. He's also a teacher who strives to support students in removing all barriers to learning code.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="img/ecma.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Ecma Scriptnstuff</h4>
+              <p class="card-text">Ecma found her passion for computers and programming over 15 years ago. She is excited to introduce people to the wonderful world of JavaScript.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="img/jay.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Jay Query</h4>
+              <p class="card-text">Jay is a developer, author of CSS: The Missing Manual, JavaScript &amp; jQuery: The Missing Manual, and web development teacher.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="card-img-top img-fluid" src="img/json.png" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Json Babel</h4>
+              <p class="card-text">All of his professional life, Json has worked with computers online; he is a polyglot programmer and likes using the right tools for the job.</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- /speakers -->
 
       <!-- schedule -->
@@ -139,6 +199,7 @@
         </div>
       </div>
       <!-- /footer -->
+
     </div>
     <!-- /container -->
 
