--- a/public/index.html
+++ b/public/index.html
@@ -61,14 +61,14 @@
         </div>
         <div class="col-lg-4">
           <h3 class="mb-4">What You'll Learn</h3>
-          <ul>
-            <li><strong>MongoDB</strong>: NoSQL database</li>
-            <li><strong>Angular</strong>: JavaScript framework</li>
-            <li><strong>Express</strong>: Framework for Node</li>
-            <li><strong>Node.js</strong>: JavaScript environment</li>
-            <li><strong>ES2015</strong>: Latest version of JavaScript</li>
-            <li><strong>Babel</strong>: JavaScript compiler</li>
-          </ul>
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
+            <a href="#" class="list-group-item list-group-item-action"><strong>Angular</strong>: JavaScript framework </a>
+            <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
+            <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript environment</a>
+            <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of JavaScript</a>
+            <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+          </div>
         </div>
       </div>
       <!-- /about -->
@@ -140,7 +140,57 @@
 
       <!-- schedule -->
       <h1 id="schedule" class="display-4 text-center my-5 text-muted">Schedule</h1>
-      [schedule content here]
+      <ul class="list-group" id="schedule">
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Keynote: Internet of Things</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">9:00am</span>
+          </div>
+          <p class="mb-1">NodeStradamus</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Angular Basics</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">10:00am</span>
+          </div>
+          <p class="mb-1">Angela McAngular</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Hey, Mongo!</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">11:00am</span>
+          </div>
+          <p class="mb-1">Jay Query</p>
+        </li>
+        <li class="list-group-item list-group-item-action list-group-item-success flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Lunch</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:00pm</span>
+          </div>
+          <p class="mb-1">Free pizza for everyone.</p>
+        </li>
+         <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Introducing ES2015</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">1:00pm</span>
+          </div>
+          <p class="mb-1">Ecma Scriptnstuff</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Gettin' MEAN</h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">2:00pm</span>
+          </div>
+          <p class="mb-1">Geo "Lo" Cation</p>
+        </li>
+        <li class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">What's Babel? </h5>
+            <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">3:00pm</span>
+          </div>
+          <p class="mb-1">Json Babel</p>
+        </li>
+      </ul>
       <!-- /schedule -->
 
       <!-- callout button -->
