--- a/public/index.html
+++ b/public/index.html
@@ -8,20 +8,29 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
-  <body>
+  <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
     <!-- navbar -->
     <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary">
       <div class="container">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#about">About</a>
-          <a class="nav-item nav-link" href="#speakers">Speakers</a>
-          <a class="nav-item nav-link" href="#schedule">Schedule</a>
-        </div>
+      <!-- move from anchor only to list to get scrollspy working, active status -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#speakers">Speakers</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#schedule">Schedule</a>
+          </li>
+        </ul>
       </div>
       <a class="navbar-brand mr-auto" href="#">Presented by Treehouse</a>
       </div>
@@ -44,9 +53,9 @@
 
     <div class="container pt-5">
       <!-- about -->
-      <div class="row">
+      <div class="row" id="about">
         <div class="col-lg-4 push-lg-4">
-          <h3 id="about" class="mb-4">About Full Stack Conf</h3>
+          <h3 class="mb-4">About Full Stack Conf</h3>
           <img src="img/pdx.jpg" alt="Portland" class="mb-3 img-fluid rounded hidden-xs-down">
           <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
