--- a/public/index.html
+++ b/public/index.html
@@ -281,6 +281,7 @@
               <strong>Hurry!</strong> Early bird registration ends in 2 days.
             </div>
             <form>
+              <!-- basic info -->
               <h5 class="mb-4">Basic Info</h5>
               <div class="form-group">
                 <label for="name">Name:</label>
@@ -300,7 +301,9 @@
                   <option value="student">Student</option>
                 </select>
               </div>
+              <!-- /basic info -->
               <hr class="my-4">
+              <!-- chosen topics -->
               <h5 class="mb-4">Which Topics Interest You Most</h5>
               <div class="form-group">
                 <div class="form-check">
@@ -339,6 +342,55 @@
                   </label>
                 </div>
               </div>
+              <!-- /chosen topics -->
+              <hr class="mb-4">
+              <!-- payment -->
+              <h5 class="mb-4">Payment Info</h5>
+              <div class="row">
+                <div class="col-lg-6 form-group">
+                  <label for="cc-num">Card Number:</label>
+                  <input class="form-control" id="cc-num" type="text">
+                </div>
+                <div class="col-lg-3 form-group">
+                  <label for="zip">Zip Code:</label>
+                  <input class="form-control" id="zip" type="text">
+                </div>
+                <div class="col-lg-3 form-group">
+                  <label for="cvv">CVV:</label>
+                  <input class="form-control" id="cvv" type="text">
+                </div>
+              </div>
+              <div class="row">
+                <label class="col-lg-12">Expiration Date:</label>
+                <div class="form-group col-lg-8">
+                  <select class="custom-select form-control" id="exp-month">
+                    <option value="1">1 - January</option>
+                    <option value="2">2 - February</option>
+                    <option value="3">3 - March</option>
+                    <option value="4">4 - April</option>
+                    <option value="5">5 - May</option>
+                    <option value="6">6 - June</option>
+                    <option value="7">7 - July</option>
+                    <option value="8">8 - August</option>
+                    <option value="9">9 - September</option>
+                    <option value="10">10 - October</option>
+                    <option value="11">11 - November</option>
+                    <option value="12">12 - December</option>
+                  </select>
+                </div>
+                <div class="form-group col-lg-4">
+                  <select class="custom-select" id="exp-year">
+                    <option value="2017">2017</option>
+                    <option value="2018">2018</option>
+                    <option value="2019">2019</option>
+                    <option value="2020">2020</option>
+                    <option value="2021">2021</option>
+                  </select>
+                </div>
+              </div>
+              <!-- /payment -->
+              <hr class="mb-4">
+              <button type="submit" class="btn btn-primary btn-lg">Register</button>
             <!-- /registration form -->
           </div>
         </div> <!-- /.modal-content -->
