--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css">
   </head>
   <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
     <!-- navbar -->
+
+    <!-- TODO - debug hamburger menu not toggling -->
+
     <nav class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-primary">
       <div class="container">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- move from anchor only to list to get scrollspy working, active status -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -287,9 +290,9 @@
                 <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name" placeholder="First and last name">
               </div>
-              <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="email@example.com">
+              <div class="form-group has-danger">
+                <label class="form-control-label" for="email">Email:</label>
+                <input type="email" class="form-control form-control-danger" id="email" placeholder="email@example.com">
               </div>
               <div class="form-group">
                 <label for="role">Job Role:</label>
@@ -347,9 +350,9 @@
               <!-- payment -->
               <h5 class="mb-4">Payment Info</h5>
               <div class="row">
-                <div class="col-lg-6 form-group">
-                  <label for="cc-num">Card Number:</label>
-                  <input class="form-control" id="cc-num" type="text">
+                <div class="col-lg-6 form-group has-success">
+                  <label for="cc-num" class="form-control-label pl-0">Card Number:</label>
+                  <input class="form-control form-control-success" id="cc-num" type="text">
                 </div>
                 <div class="col-lg-3 form-group">
                   <label for="zip">Zip Code:</label>
